add click listener on contact form submit button

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<title>Multiverse</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 8]><script src="public/assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="public/assets/css/main.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="public/assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="public/assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>WRITE SOMETHING HERE</strong></a></h1>
+						<h1><a href="#"><strong>WRITE SOMETHING HERE</strong></a></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
@@ -27,62 +27,62 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<a href="public/images/fulls/01.jpg" class="image"><img src="public/images/thumbs/01.jpg" alt="" /></a>
 							<h2>Magna feugiat lorem</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a href="public/images/fulls/02.jpg" class="image"><img src="public/images/thumbs/02.jpg" alt="" /></a>
 							<h2>Nisl adipiscing</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<a href="public/images/fulls/03.jpg" class="image"><img src="public/images/thumbs/03.jpg" alt="" /></a>
 							<h2>Tempus aliquam veroeros</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<a href="public/images/fulls/04.jpg" class="image"><img src="public/images/thumbs/04.jpg" alt="" /></a>
 							<h2>Aliquam ipsum sed dolore</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
+							<a href="public/images/fulls/05.jpg" class="image"><img src="public/images/thumbs/05.jpg" alt="" /></a>
 							<h2>Cursis aliquam nisl</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<a href="public/images/fulls/06.jpg" class="image"><img src="public/images/thumbs/06.jpg" alt="" /></a>
 							<h2>Sed consequat phasellus</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
+							<a href="public/images/fulls/07.jpg" class="image"><img src="public/images/thumbs/07.jpg" alt="" /></a>
 							<h2>Mauris id tellus arcu</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
+							<a href="public/images/fulls/08.jpg" class="image"><img src="public/images/thumbs/08.jpg" alt="" /></a>
 							<h2>Nunc vehicula id nulla</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
+							<a href="public/images/fulls/09.jpg" class="image"><img src="public/images/thumbs/09.jpg" alt="" /></a>
 							<h2>Neque et faucibus viverra</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a href="public/images/fulls/10.jpg" class="image"><img src="public/images/thumbs/10.jpg" alt="" /></a>
 							<h2>Mattis ante fermentum</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
+							<a href="public/images/fulls/11.jpg" class="image"><img src="public/images/thumbs/11.jpg" alt="" /></a>
 							<h2>Sed ac elementum arcu</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<a href="public/images/fulls/12.jpg" class="image"><img src="public/images/thumbs/12.jpg" alt="" /></a>
 							<h2>Vehicula id nulla dignissim</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
@@ -110,7 +110,7 @@
 							</div>
 							<div>
 								<section>
-									<h2>Get in touch</h2>
+									<h2 id="contactHeader">Get in touch</h2>
 									<form method="post" action="#">
 										<div class="field half first">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -127,6 +127,9 @@
 										</ul>
 									</form>
 								</section>
+								<p class="copyright">
+									&copy; Untitled.
+								</p>
 							</div>
 						</div>
 					</footer>
@@ -134,12 +137,12 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="public/assets/js/jquery.min.js"></script>
+			<script src="public/assets/js/jquery.poptrox.min.js"></script>
+			<script src="public/assets/js/skel.min.js"></script>
+			<script src="public/assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="public/assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="public/assets/js/main.js"></script>
 
 	</body>
 </html>
