added body-parser and emailjs

--- a/index.html
+++ b/index.html
@@ -28,62 +28,62 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="public/images/fulls/01.jpg" class="image"><img src="public/images/thumbs/01.jpg" alt="" /></a>
-							<h2>Magna feugiat lorem</h2>
+							<h2>ARTZ AND THINGS</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/02.jpg" class="image"><img src="public/images/thumbs/02.jpg" alt="" /></a>
-							<h2>Nisl adipiscing</h2>
+							<h2>MORE ART</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/03.jpg" class="image"><img src="public/images/thumbs/03.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
+							<h2>ALL THE ARTZ</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/04.jpg" class="image"><img src="public/images/thumbs/04.jpg" alt="" /></a>
-							<h2>Aliquam ipsum sed dolore</h2>
+							<h2>SO MUCH ART</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/05.jpg" class="image"><img src="public/images/thumbs/05.jpg" alt="" /></a>
-							<h2>Cursis aliquam nisl</h2>
+							<h2>THERE'S NO END TO ART</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/06.jpg" class="image"><img src="public/images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
+							<h2>ART IS LOVE</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/07.jpg" class="image"><img src="public/images/thumbs/07.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
+							<h2>ART IS LIFE</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/08.jpg" class="image"><img src="public/images/thumbs/08.jpg" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
+							<h2>ART ART ART ART ART</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/09.jpg" class="image"><img src="public/images/thumbs/09.jpg" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
+							<h2>okay this is the second last art</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/10.jpg" class="image"><img src="public/images/thumbs/10.jpg" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
+							<h2>art.</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/11.jpg" class="image"><img src="public/images/thumbs/11.jpg" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
+							<h2>just kidding</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
 							<a href="public/images/fulls/12.jpg" class="image"><img src="public/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
+							<h2>okay, the last art, i promise</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 					</div>
